Create resource routes and navigate with breadcrumbs and add active class to sidebar

--- a/views/src/lang/translations/en.json
+++ b/views/src/lang/translations/en.json
@@ -7,5 +7,16 @@
         "linkSetting": "Link Setting",
         "inputCode": "InputCode",
         "generalSetting": "Setting"
+    },
+    "table" : {
+        "title" : {
+            "campaign": "Campaign List"
+        },
+        "btn": {
+            "createNew": "New Campaign"
+        }
+    },
+    "export": {
+        "csv": "Export to csv"
     }
 }
