--- a/views/src/lang/translations/en.json
+++ b/views/src/lang/translations/en.json
@@ -6,6 +6,7 @@
         "report": "Report",
         "linkSetting": "Link Setting",
         "inputCode": "InputCode",
+        "user": "User",
         "generalSetting": "Setting"
     },
     "table" : {
