--- a/views/src/lang/translations/jp.json
+++ b/views/src/lang/translations/jp.json
@@ -6,6 +6,7 @@
         "report": "レポート",
         "linkSetting": "リンク設定",
         "inputCode": "埋め込みコード",
+        "user": "ユーザー",
         "generalSetting": "全般設定"
     },
     "table" : {
