--- a/views/src/lang/translations/en.json
+++ b/views/src/lang/translations/en.json
@@ -7,7 +7,8 @@
         "linkSetting": "Link Setting",
         "inputCode": "InputCode",
         "user": "User",
-        "generalSetting": "Setting"
+        "generalSetting": "Setting",
+        "signOut": "Sign Out"
     },
     "table" : {
         "title" : {
