update user sign in functions

--- a/views/src/lang/translations/en.json
+++ b/views/src/lang/translations/en.json
@@ -1,6 +1,6 @@
 {
     "nav" : {
-        "home": "Home",
+        "dashboard": "Home",
         "campaign": "Campaign",
         "campaignOutput": "Campaign Output",
         "report": "Report",
